--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,8 +5,8 @@
 @import "base/_base";
 @import "base/_typogrophy";
 
-
-@import "pages/_home";
+@import "components/_header";
+@import "components/_container";
 
 
 
