--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,24 @@
 
 @import "pages/_home";
 
+// .banner{
+//     width : 90%;
+//     padding : 20px 10px;
+//     margin : 0px auto;
+//     margin-top : 2rem;
+//     display: flex;
+// }
+
+// .banner-img-div >img  {
+//     max-width: 100%;
+//     width: auto;
+//     height: auto;
+// }
+
+// .button-div {
+//     margin-top : 20px;
+// }
+
 
 
 
