--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -13,3 +13,35 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+$font-weight-regular: 400;
+$font-weight-medium: 500;
+$font-weight-semi-bold: 600;
+$font-weight-bold: 700;
+
+h1{
+    font-size:50px; 
+    font-weight: $font-weight-semi-bold;
+  }
+  
+  h2{
+    font-size:36px; 
+    font-weight: $font-weight-semi-bold;
+  }
+  
+  h3{
+    font-size: 18px; 
+    font-weight: $font-weight-medium;
+  }
+  
+  // text style
+  .text{
+    font-size:16px; 
+    font-weight: $font-weight-regular;
+    line-height:26px;
+  }
+
+  p{
+     @extend .text; //using text style
+  }
+  
+
