--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -2,6 +2,7 @@
 	//border: 1px solid red;
 	padding: 1rem 2rem;
 	display: flex;
+	box-shadow: 0 0 5px rgba(0,0,0,.2);
 
 	&__logo {
 		height: 5rem;
@@ -13,6 +14,7 @@
 	//border: 1px solid green;
 	display: flex;
 	align-self: stretch;
+	margin-right: 4rem;
 
 	&__list {
 		list-style: none;
@@ -24,31 +26,53 @@
 		display: flex;
 		&:not(:last-child) {
 			margin-right: 1.5rem;
+
 		}
 
 	}
 
 	&__link {
-
+		position: relative;
 
 		&:link, &:visited {
 			font-size: 1.6rem;
 			text-decoration: none;
-			color: black;
 			display: flex;
 			align-items: center;
-			padding: 1rem .8rem;
+			padding: 0rem .5rem;
 			transition: all .2s;
-			border-bottom: 2px solid transparent;
 			font-weight: 600;
+			background: linear-gradient(to right, red, green, blue);
+			background-clip: text;
+			-webkit-background-clip: text;
+			color: transparent;
+			/*border-right: 1px solid black;*/
+
 
 		}
 
-		&:hover,&:active {
-			border-bottom: 2px solid black;
+		&::before {
+			content: "";
+			display: inline-block;
+			width: 50%;
+			height: 100%;
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			background-color: rgba(0,0,0,.2);
+			transition: all .8s;
 		}
 
+		&:hover::before {
+			width: 100%;
+			background-color: rgba(0,0,0,.4);
+
+		}
+
+
+	
 		
 	}
 }
+
 
