--- a/css/styles.css
+++ b/css/styles.css
@@ -77,15 +77,16 @@ html {
 
 .banner {
   width: 90%;
-  padding: 20px 10px;
+  padding: 20px auto;
   margin: 0 auto;
   margin-top: 2rem;
   display: flex;
-  animation: moveInBottom 0.5s ease-out; }
+  animation: moveInBottom 0.5s ease-out;
+  background-color: transparent; }
   .banner > * {
     flex: 1;
     margin-bottom: 30px; }
-  .banner-img-div img {
+  .banner-img img {
     max-width: 100%;
     height: auto;
     width: auto; }
@@ -93,8 +94,20 @@ html {
 .banner-main__title {
   margin: 20px auto;
   padding-top: 30px; }
-  .banner-main__title span {
-    background-image: linear-gradient(transparent calc(100% - 20px), #ff0000b4 0px); }
+
+.underlined {
+  position: relative; }
+
+.underlined::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 12px;
+  width: 100%;
+  left: 0;
+  bottom: 10px;
+  z-index: -1;
+  background-color: red; }
 
 .btn:link, .btn:visited {
   border-radius: 100px;
@@ -128,3 +141,31 @@ html {
   .banner {
     flex-flow: column;
     padding-top: 0; } }
+
+.intro {
+  width: 90%;
+  padding-top: 2rem;
+  display: flex; }
+  .intro > * {
+    flex: 1;
+    margin-bottom: 30px; }
+  .intro-img {
+    padding: 20px; }
+    .intro-img img {
+      max-width: 100%;
+      height: auto;
+      width: auto; }
+  .intro-heading {
+    margin-bottom: 1rem; }
+
+.intro-text {
+  margin-left: 20px;
+  padding-top: 15%; }
+  .intro-text p {
+    line-height: 1.7; }
+
+@media (max-width: 736px) {
+  .intro {
+    flex-flow: column; }
+    .intro-img {
+      order: 2; } }
