--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,20 +1,20 @@
-
 .banner {
   width: 90%;
-  padding: 20px 10px;
+  padding: 20px auto;
   margin: 0 auto;
   margin-top: 2rem;
   display: flex;
- animation: moveInBottom 0.5s ease-out;
- 
-  
+  animation: moveInBottom 0.5s ease-out;
+  //  background-color:#ebeeff;
+  background-color: transparent;
+  //  background: url(../../dist/images/bubbles_bg_green.svg) no-repeat;
 
   & > * {
     flex: 1;
     margin-bottom: 30px;
   }
 
-  &-img-div {
+  &-img {
     img {
       max-width: 100%;
       height: auto;
@@ -27,14 +27,31 @@
   &__title {
     margin: 20px auto;
     padding-top: 30px;
-
-    span {
-      background-image: linear-gradient(
-        transparent calc(100% - 20px),
-        #ff0000b4 0px
-      );
-    }
   }
+  // span {
+  //   background-image: linear-gradient(
+  //     transparent calc(100% - 20px),
+  //     red 0px
+  //   );
+  // }
+
+ 
+}
+
+.underlined {
+  position: relative;
+}
+
+.underlined::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 12px;
+  width: 100%;
+  left: 0;
+  bottom: 10px;
+  z-index: -1;
+  background-color: red;
 }
 
 .btn {
@@ -74,8 +91,8 @@
   }
 }
 
-@media (max-width:736px) {
-  .banner{
+@media (max-width: 736px) {
+  .banner {
     flex-flow: column;
     padding-top: 0;
   }
