--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -39,7 +39,7 @@
 			text-decoration: none;
 			display: flex;
 			align-items: center;
-			padding: 0rem .5rem;
+			padding: 0rem 1rem;
 			transition: all .2s;
 			font-weight: 600;
 			background: linear-gradient(to right, red, green, blue);
