--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,8 @@
 @import "components/_header";
 @import "components/_container";
 @import "components/_banner";
-@import "components/_intro"
+@import "components/_about";
+@import "components/_organisers";
 
 
 
