--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -1,83 +1,63 @@
+
 .banner {
-  width: 90%;
-  padding: 20px auto;
-  margin: 0 auto;
-  margin-top: 2rem;
-  display: flex;
-  animation: moveInBottom 0.5s ease-out;
-  //  background-color:#ebeeff;
-  background-color: transparent;
-  //  background: url(../../dist/images/bubbles_bg_green.svg) no-repeat;
+  height: 70vh;
+  background-image: linear-gradient(to right,rgba(0, 0, 255, 0.5),rgba(14, 58, 170, 0.5) ),url(../img/timg.png);
+   // background-image:rgba(55, 112, 255, 0.8) ,url(../img/DSC-banner.webp);
 
-  & > * {
-    flex: 1;
-    margin-bottom: 30px;
-  }
-
-  &-img {
-    img {
-      max-width: 100%;
-      height: auto;
-      width: auto;
-    }
-  }
-}
-
-.banner-main {
-  &__title {
-    margin: 20px auto;
-    padding-top: 30px;
-  }
-  // span {
-  //   background-image: linear-gradient(
-  //     transparent calc(100% - 20px),
-  //     red 0px
-  //   );
-  // }
-
- 
-}
-
-.underlined {
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-position: center;
+  // animation: moveInBottom 0.5s ease-out;
+  text-align: center;
   position: relative;
+
+  &__text-box{
+position: absolute;
+left:50%;
+top: 45%;
+transform: translate(-50% , -50%);
+  }
+
+  &__heading{
+    color:$color-white;
+    font-weight: 900;
+    font-family:  'Nunito Sans', sans-serif;
+    margin-bottom: 2rem;
+   
+  }
 }
 
-.underlined::after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  height: 12px;
-  width: 100%;
-  left: 0;
-  bottom: 10px;
-  z-index: -1;
-  background-color: red;
-}
+
 
 .btn {
   &:link,
   &:visited {
-    border-radius: 100px;
+    border-radius: 10rem;
     display: inline-block;
     text-decoration: none;
-    padding: 15px 30px;
-    font-size: 18px;
+    padding: 1.5rem 4rem;
+    font-size: 2rem;
+    font-weight: 600;
     transition: all 0.2s;
   }
 
   &:hover {
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px #0000ff3a;
+    box-shadow: 0 1rem 2rem rgba($color-black,.2);
   }
 
   &:active {
     transform: translate(-1px);
-    box-shadow: 0 5px 10px #0000ff3a;
+    box-shadow: 0 0.5rem 1rem rgba($color-black,.2);
   }
 
-  &-blue {
-    background-color: blue;
-    color: #fff;
+  &--white {
+    background-color: #ffffff;
+    color:blue;
+  }
+  &--white:hover{
+    background-color:blue;
+    color:#fff;
   }
 }
 @keyframes moveInBottom {
@@ -91,9 +71,4 @@
   }
 }
 
-@media (max-width: 736px) {
-  .banner {
-    flex-flow: column;
-    padding-top: 0;
-  }
-}
+
