--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -55,10 +55,10 @@ transform: translate(-50% , -50%);
     background-color: #ffffff;
     color:blue;
   }
-  &--white:hover{
-    background-color:blue;
-    color:#fff;
-  }
+  // &--white:hover{
+  //   background-color:blue;
+  //   color:#fff;
+  // }
 }
 @keyframes moveInBottom {
   0% {
