--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,4 +7,9 @@
 html {
 	font-size: 62.5%;   // 1 rem = 10px
 	font-family: "Open Sans";
+	letter-spacing: 2px;
+
+	@media only screen and (max-width: 900px) {
+		font-size: 50%;
+	}
 }
