--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -15,6 +15,10 @@
   }
 
   &-img-div {
+
+    @media only screen and (max-width: 900px) {
+      display: none;
+    }
     img {
       max-width: 100%;
       height: auto;
