--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import "base/_base";
 @import "base/_typogrophy";
+@import "base/_utilities";
 
 @import "components/_header";
 @import "components/_container";
